grammar.js
      source_code: ($) => optional(seq($._statements, optional($._end_of_file))),
      _statements: ($) => prec.right(seq($._statement, optional($._statements))),

      // Comments
      line_comment: ($) => token(seq("//", /[^\r\n]*/)),
      comment: ($) => choice($.line_comment, $.block_comment),

      // Includes
      include_file_reference: ($) => $.__include_file_reference,
      __include_file_reference: ($) => seq($.__include_file_opener, "}", optional(".")),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-sequence
      if_preprocessor_directive_statement: ($) =>
        choice(
          alias($.__if_preprocessor_if_statement, $.if_branch),
          alias($.__if_preprocessor_then_statement, $.then_branch),
          alias($.__if_preprocessor_elseif_statement, $.elseif_branch),
          alias($.__if_preprocessor_else_statement, $.else_branch),
          alias($.__if_preprocessor_endif_statement, $.endif_branch),
        ),
      __if_preprocessor_if_statement: ($) =>
        prec.right(seq(token(prec(1, /&IF/i)), field("condition", $._expression))),
      __if_preprocessor_then_statement: ($) => token(prec(1, /&THEN/i)),
      __if_preprocessor_elseif_statement: ($) =>
        prec.right(seq(token(prec(1, /&ELSEIF/i)), field("condition", $._expression))),
      __if_preprocessor_else_statement: ($) => token(prec(1, /&ELSE/i)),
      __if_preprocessor_endif_statement: ($) => token(prec(1, /&ENDIF/i)),
      include_file_path: ($) =>
        seq(optional($.preprocessor_name), alias($.__include_file_name, $.identifier)),
      __include_file_name: ($) =>
        /[A-Za-z0-9_!\\/.-](?:[A-Za-z0-9_!\\/.-]|\{&[0-9A-Za-z_-]+\})*\.[A-Za-z][A-Za-z0-9]*/,

      // Extra macros retain their names and any default or annotation payload.
      preprocessor_name: ($) => prec(1, seq($.__preprocessor_name_prefix, "}")),
      __preprocessor_name_prefix: ($) =>
        seq(
          // The external opener signals value contexts; the internal opener
          // preserves contextual lexing of macro-prefixed include paths and names.
          // oxlint-disable-next-line tree-sitter-optimize/choice-product-extraction
          choice(seq("{", "&"), $._preprocessor_start),
          // {&2 = "default"} defaults positional include argument 2 when
          // the caller omits it; {&NAME} refers to a named one.
          // oxlint-disable-next-line tree-sitter-optimize/shared-choice, tree-sitter-optimize/alternative-extraction, tree-sitter-optimize/choice-product-extraction
          choice($.identifier, $.number_literal, alias($._numeric_identifier, $.identifier)),
          optional(seq("=", field("value", $.__preprocessor_name_value))),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/inline-dispatcher-boundary
      number_literal: ($) => token(/([0-9]+(\.[0-9]+)?|\.[0-9]+)/),
      null_literal: ($) => token("?"),
      boolean_literal: ($) => choice(kw("TRUE"), kw("FALSE"), kw("YES"), kw("NO")),
      _qualified_identifier: ($) =>
        choice(
          $.macro_concatenated_name,
          $.identifier,
          $.qualified_name,
          alias($._kw_procedure, $.identifier),
          alias($._kw_interface, $.identifier),
        ),
      // BUFFER and TABLE-HANDLE can be identifiers in assignments, receivers,
      // and unnamed arguments, as well as parameter and handle-type markers.
      // TODO: Support marker identifiers in ASSIGN and compound/parenthesized
      // expressions without broadening expression states; preserve assignment
      // boundaries such as ASSIGN x = Buffer y = 1.
      // oxlint-disable-next-line tree-sitter-optimize/shared-keyword-alias-choice-inline
      macro_concatenated_name: ($) => token(MACRO_CONCATENATED_NAME),

      _widgets: ($) =>
        // oxlint-disable-next-line tree-sitter-optimize/inline-keyword-owner
        prec.right(alias(choice(...WIDGETS, kw("FRAME", { offset: 4 })), $.identifier)),
      // oxlint-disable-next-line tree-sitter-optimize/choice-subset
      assignment_operator: ($) => choice("=", "+=", "-=", "*=", "/="),
      _comparison_operator: ($) => choice("=", ...COMPARISON_OPERATORS),

      // Assignabless
      assignment_statement: ($) =>
        prec.right(seq($.__assignment_statement_body, $._no_error_terminator)),
      __assignment_statement_body: ($) =>
        seq(
          field("left", $._assignable),
          field("operator", $.assignment_operator),
          field("right", choice($._assignment_value, $._bare_marker_identifier)),
          optional($.widget_phrase),
        ),

      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline
      unary_expression: ($) =>
        choice(
          prec("unary", seq($.__unary_sign, $._expression)),
          prec("not", seq($._kw_not, $._expression)),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-choice
      __unary_sign: ($) => choice("+", "-"),
      binary_expression: ($) => binary_expression($, $._expression, $._comparison_operator),
      // _statement_expression excludes `=` from comparison operators to disambiguate
      // assignment vs equality at the statement level. Without this, `x = 5.` could
      // parse as either assignment_statement or expression_statement (equality check).
      // By excluding `=` here, expression_statement cannot match `x = 5.`, forcing it
      // to parse as assignment_statement.
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline, tree-sitter-optimize/shared-symbol-alias-choice-inline
      object_access: ($) => seq($._object_access_prefix, $._object_access_tail),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline
      _object_access_prefix: ($) =>
        choice(
          $._object_access_widget_prefix,
          $._object_access_handle_prefix,
          $._object_access_plain_prefix,
        ),
      qualified_name: ($) => seq(field("left", $._qualified_name_left), $.__qualified_name_tail),
      __qualified_name_tail: ($) =>
        seq(
          $._namedot,
          field("right", alias($._identifier_immediate, $.identifier)),
          optional($.__qualified_name_tail),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline, tree-sitter-optimize/shared-symbol-alias-choice-inline
      _qualified_name_left: ($) =>
        choice(
          $.macro_concatenated_name,
          $.identifier,
          $.preprocessor_name,
          alias($._kw_interface, $.identifier),
        ),

      array_initializer: ($) => seq($._array_initializer_prefix, "]"),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-sequence-inline
      _array_initializer_prefix: ($) => seq("[", optional($._expressions)),

      arguments: ($) => seq($.__arguments_prefix, ")"),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-sequence, tree-sitter-optimize/non-empty-tail-extraction
      __arguments_prefix: ($) => seq("(", optional($.argument), optional($.__arguments_comma_tail)),
      // COM calls use empty comma-delimited slots for omitted positional arguments.
      // oxlint-disable-next-line tree-sitter-optimize/tail-extraction
      argument: ($) =>
        seq(
          optional(prec.dynamic(1, field("direction", $._parameter_direction))),
          $.__argument_body,
        ),
      __argument_body: ($) =>
        seq(
          choice(
            seq(field("name", $._qualified_identifier), $.__argument_in_handle),
            seq(
              choice(
                seq(
                  choice($._kw_table, $._kw_buffer, $._kw_table_handle, $._kw_dataset_handle),
                  field(
                    "name",
                    choice(
                      $._qualified_identifier,
                      $.object_access,
                      $.function_call,
                      $.binary_expression,
                    ),
                  ),
                ),
                field(
                  "name",
                  choice(
                    $._expression,
                    alias($.__argument_generic_type, $.generic_type),
                    $._bare_marker_identifier,
                  ),
                ),
              ),
              optional($.__argument_in_handle),
            ),
          ),
          optional($.__argument_type_passing),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-choice
      function_call: ($) =>
        seq(
          field(
            "function",
            choice(
              $._qualified_identifier,
              alias($.__symbolic_name, $.identifier),
              $.object_access,
              $.scoped_name,
              $.system_handle_identifier,
            ),
          ),
          $.arguments,
        ),

      widget_qualified_name: ($) =>
        seq(
          field(
            "target",
            choice($._qualified_identifier, $.scoped_name, $.object_access, $.function_call),
          ),
          $.__widget_qualified_name_separator,
          choice(
            seq($._widgets, field("widget", choice($.identifier, $.preprocessor_name))),
            seq(
              alias(kw("FRAME", { offset: 4 }), $.identifier),
              field("widget", alias($._numeric_identifier, $.identifier)),
            ),
          ),
        ),
      __widget_qualified_name_separator: ($) => $._kw_in,

      identifier: ($) => token(/[_A-Za-z][A-Za-z0-9_\-&#%$!]*/),

      // Routine names accept initials and operators that remain illegal in data identifiers.
      // oxlint-disable-next-line tree-sitter-optimize/shared-symbol-alias-choice-inline
      __symbolic_name: ($) => token(/[!#$%][A-Za-z0-9_\-&#%$!]*/),

      _numeric_identifier: ($) => numeric_identifier(),

      _object_access_tail: ($) =>
        seq(
          choice(
            seq(
              $._object_access_separator,
              field("right", alias($._identifier_immediate, $.identifier)),
            ),
            seq($._namedoublecolon, field("member", alias($._identifier_immediate, $.identifier))),
          ),
          optional($._object_access_tail),
        ),
      // oxlint-disable-next-line tree-sitter-optimize/single-use-shared-choice-inline
      _no_error_terminator: ($) => seq(optional($.__no_error), $._terminator),
      // oxlint-disable-next-line tree-sitter-optimize/inline-keyword-owner
